@@ -38,6 +38,7 @@
 #define B_ACTION_FINISHED               12
 #define B_ACTION_CANCEL_PARTNER         12 // when choosing an action
 #define B_ACTION_NOTHING_FAINTED        13 // when choosing an action
+#define B_ACTION_RUN_PROMPT             14
 #define B_ACTION_NONE                   0xFF
 
 #define MOVE_TARGET_SELECTED            0
