@@ -380,7 +380,8 @@
 #define STRINGID_TRAINER2WINTEXT            380
 #define STRINGID_PLAYERLOSTTOENEMYTRAINER   381
 #define STRINGID_PLAYERPAIDPRIZEMONEY       382
-#define BATTLESTRINGS_COUNT                 383
+#define STRINGID_RUNPROMPT                  383
+#define BATTLESTRINGS_COUNT                 384
 
 // This is the string id that gBattleStringsTable starts with.
 // String ids before this (e.g. STRINGID_INTROMSG) are not in the table,
