@@ -45,6 +45,7 @@ Added following pokemon
 Added tinting Day/Night cycle
 Added TM case
 Pokemon can evolve mid-battle
+Run away with B button during battle
 
 3 Superboss battles
 	- Red in Stevens old cave
